@@ -44,7 +44,7 @@ import static org.ehcache.xml.XmlModel.convertToXmlTimeUnit;
 public class CoreCacheConfigurationParser {
 
   public <K, V> CacheConfigurationBuilder<K, V> parse(CacheTemplate cacheDefinition, ClassLoader cacheClassLoader,
-                                                      CacheConfigurationBuilder<K, V> cacheBuilder) throws ClassNotFoundException, IllegalAccessException, InstantiationException {
+                                                      CacheConfigurationBuilder<K, V> cacheBuilder) throws ReflectiveOperationException {
     final Expiry parsedExpiry = cacheDefinition.expiry();
     if (parsedExpiry != null) {
       cacheBuilder = cacheBuilder.withExpiry(getExpiry(cacheClassLoader, parsedExpiry));
@@ -59,7 +59,7 @@ public class CoreCacheConfigurationParser {
 
   @SuppressWarnings({"unchecked", "deprecation"})
   private static ExpiryPolicy<? super Object, ? super Object> getExpiry(ClassLoader cacheClassLoader, Expiry parsedExpiry)
-    throws ClassNotFoundException, InstantiationException, IllegalAccessException {
+    throws ReflectiveOperationException {
     if (parsedExpiry.isUserDef()) {
       try {
         return getInstanceOfName(parsedExpiry.type(), cacheClassLoader, ExpiryPolicy.class);
@@ -75,12 +75,12 @@ public class CoreCacheConfigurationParser {
     }
   }
 
-  static <T> T getInstanceOfName(String name, ClassLoader classLoader, Class<T> type) throws ClassNotFoundException, InstantiationException, IllegalAccessException {
+  static <T> T getInstanceOfName(String name, ClassLoader classLoader, Class<T> type) throws ReflectiveOperationException {
     if (name == null) {
       return null;
     }
     Class<?> klazz = getClassForName(name, classLoader);
-    return klazz.asSubclass(type).newInstance();
+    return klazz.asSubclass(type).getDeclaredConstructor().newInstance();
   }
 
   public CacheType unparse(CacheConfiguration<?, ?> cacheConfiguration, CacheType cacheType) {
